header button alignment and gap was fixed

--- a/style.css
+++ b/style.css
@@ -117,7 +117,8 @@ li a{
 .btn2{
     background-color: #e28181;
     color: white;
-    border-radius: 8px;
+    margin: 10px;
+    border-radius: 20px;
 }
 .vid1{
     height: 600px;
